--- a/faq.html
+++ b/faq.html
@@ -25,70 +25,70 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <main>
         <section class="faq">
             <h1>Frequently Asked Questions</h1>
-            <section class="faq-container">
-                <section class="faq-accordion">
-                    <article class="faq-accordion-item" id="question1">
+            <div class="faq-container">
+                <div class="faq-accordion">
+                    <div class="faq-accordion-item" id="question1">
                         <a class="faq-accordion-link" href="#question1">
                             How can you print a document from your laptop at HZ?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <article class="faq-answer">
+                        <div class="faq-answer">
                             <p>We just need to connect our laptop to one of the printers at school.</p>
-                        </article>
-                    </article>
-                    <article class="faq-accordion-item" id="question2">
+                        </div>
+                    </div>
+                    <div class="faq-accordion-item" id="question2">
                         <a class="faq-accordion-link" href="#question2">
                             How can you scan a document a send it to your laptop at HZ?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <article class="faq-answer">
+                        <div class="faq-answer">
                             <p>We can use one of the printers with scanner. Then, scan your paper correctly and it will added to your laptop</p>
-                        </article>
-                    </article>
-                    <article class="faq-accordion-item" id="question3">
+                        </div>
+                    </div>
+                    <div class="faq-accordion-item" id="question3">
                         <a class="faq-accordion-link" href="#question3">
                             What do you need to do when you are sick/show symptoms of coronavirus?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <article class="faq-answer">
+                        <div class="faq-answer">
                             <p>We need to contact our teacher or helpdesk at school. We have to stay at home and join the online class to compensate for unusual sickness.</p>
-                        </article>
-                    </article>
-                    <article class="faq-accordion-item" id="question4">
+                        </div>
+                    </div>
+                    <div class="faq-accordion-item" id="question4">
                         <a class="faq-accordion-link" href="#question4">
                             How can you book a project space in one of the wings?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <article class="faq-answer">
+                        <div class="faq-answer">
                             <p>Login via Selfservice Portal and then we need to book a room on the HZ page. We need to follow the instructions</p>
-                        </article>
-                    </article>
-                    <article class="faq-accordion-item" id="question5">
+                        </div>
+                    </div>
+                    <div class="faq-accordion-item" id="question5">
                         <a class="faq-accordion-link" href="#question5">
                             What are the instructions if you want to park your car at the HZ parking lot?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
-                        <article class="faq-answer">
+                        <div class="faq-answer">
                             <p>We must park our car at the parking lot of the former PEZM.</p>
-                        </article>
-                    </article>
-                </section>
-            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>    
     <footer>
@@ -102,9 +102,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>   
 </body>
