--- a/profile.html
+++ b/profile.html
@@ -24,12 +24,12 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <header class="profile-header">
         <figure> 
@@ -37,7 +37,7 @@
         </figure>
         <article class="profile-main-text-container">
             <h1>ALESSANDRO RYO</h1>
-            <h2>&#183 A STUDENT &#183</h2>
+            <h2>&#183; A STUDENT &#183;</h2>
             <article class="profile-data">
                 <h4>Date Birth:</h4>
                 <p>October 19th, 2003</p>
@@ -55,11 +55,11 @@
     <main class="main-background">
         <section class="profile">
             <h1>Hello! I'm Ryo</h1>
-            <article class="profile-text">
+            <div class="profile-text">
                 <p>A student and a dreamer. Now, I study at HZ University of Applied Sciences.
                 On this page, I will give you an overview of myself. I hope you can know more about who I am.</p>
-            </article>
-            <article div class="profile-row">
+            </div>
+            <div class="profile-row">
                 <article class="profile-col">
                     <h3>Where do I came from?</h3>
                     <p>I came from Indonesia.</p>
@@ -77,106 +77,106 @@
                     but I am also open to watching other films.
                     I prefer pop genre songs and produce from Indonesia.</p>
                 </article>
-            </article>
+            </div>
         </section> 
         <article class="edu-title">
-            <h2>&#8226 Education &#8226</h2>
+            <h2>&#8226; Education &#8226;</h2>
         </article>
-        <section class="edu-container">
-            <article class="edu-timeline">
+        <div class="edu-container">
+            <div class="edu-timeline">
                 <ul>
                     <li>
                         <article class="edu-timeline-content">
                             <h2 class="edu-date">2015-2018</h2>
-                            <h1>Saint Angela<br>Junior High School</h1>
+                            <h3>Saint Angela<br>Junior High School</h3>
                             <p>Student</p>
                         </article>
                     </li>
                     <li>
                         <div class="edu-timeline-content">
                             <h2 class="edu-date">2018-2021</h2>
-                            <h1>Saint Angela<br>Senior High School</h1>
+                            <h3>Saint Angela<br>Senior High School</h3>
                             <p>Student</p>
                         </div>
                     </li>
                 </ul>
-            </article>
-        </section>
+            </div>
+        </div>
         <article class="org-title">
-        <h2>&#8226 Organization &#8226</h2>
+        <h2>&#8226; Organization &#8226;</h2>
         </article>
-        <section class="org-container">
-        <article class="org-timeline">
+        <div class="org-container">
+        <div class="org-timeline">
             <ul>
                 <li>
                     <article class="org-timeline-content">
                         <h2 class="org-date">2018-2019</h2>
-                        <h1>Student Council</h1>
+                        <h3>Student Council</h3>
                         <p>Member of IT Division</p>
                     </article>
                 </li>
                 <li>
                     <article class="org-timeline-content">
                         <h2 class="org-date">2019-2020</h2>
-                        <h1>Student Council</h1>
+                        <h3>Student Council</h3>
                         <p>Head of IT Division</p>
                     </article>
                 </li>
             </ul>
-        </article>
-        </section>
+        </div>
+        </div>
         <article class="skill-title">
-            <h2>&#8226 Skill &#8226</h2>
+            <h2>&#8226; Skill &#8226;</h2>
         </article>
-        <section class="skills-container">
-            <section class="skill">
-              <article class="skill-name">Time Management</article>
-              <section class="skill-bar"></section>
-              <article class="timemanagement skill-fill">
+        <div class="skills-container">
+            <div class="skill">
+              <div class="skill-name">Time Management</div>
+              <div class="skill-bar"></div>
+              <div class="timemanagement skill-fill">
                 <span class="skill-percent">80%</span>
-              </article>
-            </section>
-            <section class="skill">
-              <article class="skill-name">Creative Thinking</article>
-              <section class="skill-bar"></section>
-              <article class="creativethinking skill-fill">
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill-name">Creative Thinking</div>
+              <div class="skill-bar"></div>
+              <div class="creativethinking skill-fill">
                 <span class="skill-percent">80%</span>
-              </article>
-            </section>
-            <section class="skill">
-              <article class="skill-name">Communication</article>
-              <section class="skill-bar"></section>
-              <article class="communication skill-fill">
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill-name">Communication</div>
+              <div class="skill-bar"></div>
+              <div class="communication skill-fill">
                 <span class="skill-percent">70%</span>
-              </article>
-            </section>
-            <section class="skill">
-                <article class="skill-name">Teamwork</article>
-                <section class="skill-bar"></section>
-                <article class="teamwork skill-fill">
+              </div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Teamwork</div>
+                <div class="skill-bar"></div>
+                <div class="teamwork skill-fill">
                   <span class="skill-percent">75%</span>
-                </article>
-              </section>
-              <section class="skill">
-                <article class="skill-name">Leadership</article>
-                <section class="skill-bar"></section>
-                <article class="leadership skill-fill">
+                </div>
+              </div>
+              <div class="skill">
+                <div class="skill-name">Leadership</div>
+                <div class="skill-bar"></div>
+                <div class="leadership skill-fill">
                   <span class="skill-percent">80%</span>
-                </article>
-              </section>
-        </section>
+                </div>
+              </div>
+        </div>
         <article class="collage-title">
-            <h2>&#8226 Me and My Friends &#8226</h2>
+            <h2>&#8226; Me and My Friends &#8226;</h2>
         </article>
         <figure class="collage-container">
-            <img src="resources/photo-collage-1.jpg">
-            <img src="resources/photo-collage-2.jpg">
-            <img src="resources/photo-collage-3.jpg">
-            <img src="resources/photo-collage-4.jpg">
-            <img src="resources/photo-collage-5.jpg">
-            <img src="resources/photo-collage-6.jpg">
-            <img src="resources/photo-collage-7.jpg">
-            <img src="resources/photo-collage-8.jpg">
+            <img src="resources/photo-collage-1.jpg" alt="photo collage 1">
+            <img src="resources/photo-collage-2.jpg" alt="photo collage 2">
+            <img src="resources/photo-collage-3.jpg" alt="photo collage 3">
+            <img src="resources/photo-collage-4.jpg" alt="photo collage 4">
+            <img src="resources/photo-collage-5.jpg" alt="photo collage 5">
+            <img src="resources/photo-collage-6.jpg" alt="photo collage 6">
+            <img src="resources/photo-collage-7.jpg" alt="photo collage 7">
+            <img src="resources/photo-collage-8.jpg" alt="photo collage 8">
         </figure>
     </main>
     <footer>
@@ -190,9 +190,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>   
 </body>
