--- a/dashboard.html
+++ b/dashboard.html
@@ -24,34 +24,34 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
             <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <main>
-            <section class="study-monitor">
+            <div class="study-monitor">
                 <article class="study-status">
                     <h1>My Dashboard</h1>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Overall &#8226</h1>
+                    <h1>&#8226; Overall &#8226;</h1>
                     <section class="nbsa-study-cards">
-                        <article class="nbsa-study-cards-item">
+                        <div class="nbsa-study-cards-item">
                             <article class="nbsa-study-cards-info">
                                 <h2>NBSA Boundary</h2>
-                                <section class="nbsa-study-cards-progress"></section>
+                                <div class="nbsa-study-cards-progress"></div>
                             </article>
                             <h2 class="nbsa-study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 The Entire Year &#8226</h1>
+                    <h1>&#8226; The Entire Year &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Personal Professional Development</h2>
                                 <p><b>12.5</b> EC</p>
@@ -59,8 +59,8 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
-                        <article class="study-cards-item">
+                        </div>
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>IT Personality</h2>
                                 <p><b>2.5</b> EC</p>
@@ -68,13 +68,13 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Whenever &#8226</h1>
+                    <h1>&#8226; Whenever &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Personality 1</h2>
                                 <p><b>1.25</b> EC</p>
@@ -82,8 +82,8 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
-                        <article class="study-cards-item">
+                        </div>
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Personality 2</h2>
                                 <p><b>1.25</b> EC</p>
@@ -91,13 +91,13 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Quartile 1 &#8226</h1>
+                    <h1>&#8226; Quartile 1 &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Programme and Career Orientation</h2>
                                 <p><b>2.5</b> EC</p>
@@ -105,8 +105,8 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
-                        <article class="study-cards-item">
+                        </div>
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Computer Science Basics</h2>
                                 <p><b>5</b> EC</p>
@@ -114,8 +114,8 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
-                        <article class="study-cards-item">
+                        </div>
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Programming Basics</h2>
                                 <p><b>5</b> EC</p>
@@ -123,13 +123,13 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Quartile 2 &#8226</h1>
+                    <h1>&#8226; Quartile 2 &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Object Oriented Programming</h2>
                                 <p><b>10</b> EC</p>
@@ -137,13 +137,13 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Quartile 3 &#8226</h1>
+                    <h1>&#8226; Quartile 3 &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Framework Development 1</h2>
                                 <p><b>5</b> EC</p>
@@ -151,8 +151,8 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
-                        <article class="study-cards-item">
+                        </div>
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Framework Project 1</h2>
                                 <p><b>7.5</b> EC</p>
@@ -160,13 +160,13 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
                 <article class="study-quartile">
-                    <h1>&#8226 Quartile 4 &#8226</h1>
+                    <h1>&#8226; Quartile 4 &#8226;</h1>
                     <section class="study-cards">
-                        <article class="study-cards-item">
+                        <div class="study-cards-item">
                             <article class="study-cards-info">
                                 <h2>Framework Project 2</h2>
                                 <p><b>10</b> EC</p>
@@ -174,10 +174,10 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </article>
+                        </div>
                     </section>
                 </article>
-            </section>
+            </div>
     </main>
     <footer>
         <article class="footer-content">
@@ -190,9 +190,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>      
 </body>
