--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <header class="index-header">
             <article class="index-main-text-container">
@@ -58,7 +58,7 @@
                 For more experience see my <a href="blog.html">blog</a>.</p>
                 <h3>My other opinions...</h3>
             </article>
-            <section class="index-row">
+            <div class="index-row">
                 <article class="index-col">
                     <h3>Passion</h3>
                     <p>Choosing HBO-ICT is my life choice and my passion is in this major.
@@ -86,7 +86,7 @@
                         <img src="resources/parents-image.png" alt="Parents Experience of Alessandro Ryo">
                     </figure>
                 </article>
-            </section>
+            </div>
         </section>
     </main>
     <footer>
@@ -100,9 +100,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>
     </body>
