--- a/others.html
+++ b/others.html
@@ -25,18 +25,18 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <main>
         <section class="others">
             <h1>Others</h1>
             <h2>Click text below to read more</h2>
-            <section class="others-container">
+            <div class="others-container">
             <ul>
                 <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">The HZ HBO-ICT Course and Examination Regulations (CER)</a></li>
                 <li><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2021-2022/11.-Uitvoeringsregeling-OER-ICT-Voltijd-2021-2022.pdf">The Implementation Regulations (IR) of the HBO-ICT programme</a></li>
@@ -45,7 +45,7 @@
                 <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">The page in MyHZ with my study progress</a></li>
                 <li><a href="https://github.com/alessandroryo/showcase-website">The Github environment of the study programme</a></li>
             </ul>
-            </section>
+            </div>
         </section>
     </main>    
     <footer>
@@ -59,9 +59,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>   
 </body>
