--- a/study-choice.html
+++ b/study-choice.html
@@ -24,12 +24,12 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <header class="study-choice-header">
         <article class="study-choice-main-text-container">
@@ -41,12 +41,12 @@
     <main class="main-background">
         <section class="answer">
             <h1>My Study Choice</h1>
-            <section class="answer-row">
+            <div class="answer-row">
                 <article class="answer-col">
                     <h3>Motivate My Study Choice</h3>
                     <p>Since I was a kid, my father often teach me about computer.
-                        Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
-                        I assume that I can improving my hobby in IT if I choose ICT programme.</p>
+                    Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
+                    I assume that I can improving my hobby in IT if I choose ICT programme.</p>
                 </article>
                 <article class="answer-col">
                     <h3>After Completing The Study</h3>
@@ -59,7 +59,7 @@
                     <h3>Study Choice Activities</h3>
                     <p>I believe in my abilities that I can grow in my current study choice</p>
                 </article>
-            </section>
+            </div>
         </section>
     </main>
     <footer>
@@ -73,9 +73,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>
     </body>
