--- a/swot.html
+++ b/swot.html
@@ -24,12 +24,12 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
-        <section class="menu-toggle">
+        <div class="menu-toggle">
           <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
-        </section>
+        </div>
     </nav>
     <header class="swot-header">
         <article class="swot-main-text-container">
@@ -39,9 +39,9 @@
         </article>
     </header>
     <main class="main-background">
-        <section class="swot">
+        <div class="swot">
                 <article class="swot-card">
-                    <h1>Strengths</h1>
+                    <h4>Strengths</h4>
                     <span></span>
                     <ul>
                         <li>Focus</li>
@@ -51,7 +51,7 @@
                     </ul>
                 </article>
                 <article class="swot-card">
-                    <h1>Weaknesses</h1>
+                    <h4>Weaknesses</h4>
                     <span></span>
                     <ul>
                         <li>Too much thinking</li>
@@ -61,7 +61,7 @@
                     </ul>
                 </article>
                 <article class="swot-card">
-                    <h1>Opportunities</h1>
+                    <h4>Opportunities</h4>
                     <span></span>
                     <ul>
                         <li>Good environment</li>
@@ -70,7 +70,7 @@
                     </ul>
                 </article>
                 <article class="swot-card">
-                    <h1>Threats</h1>
+                    <h4>Threats</h4>
                     <span></span>
                     <ul>
                         <li>Different culture</li>
@@ -78,7 +78,7 @@
                         <li>Playing too much</li>
                     </ul>
                 </article>
-        </section>
+        </div>
     </main>
     <footer>
         <article class="footer-content">
@@ -91,9 +91,9 @@
                 <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
-        <article class="footer-bottom">
+        <div class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
-        </article>
+        </div>
     </footer> 
     <script src="js/script.js"></script>
     </body>
