--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,10 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>We just need to connect our laptop to one of the printers at school.</p>
+                            <p>1. Go to <a href="print.hz.nl">print.hz.nl</a>
+                            . 2. Login with HZ account. 3. Upload the document. 4. Walk to the HZ printer location.
+                            5. Tap the student card. 6. Tap the print button. 7. Check the document that you want to print.
+                            8. Print the document. 9. Tap the close button.    </p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question2">
@@ -54,7 +57,9 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>We can use one of the printers with scanner. Then, scan your paper correctly and it will added to your laptop</p>
+                            <p>1. Walk to the HZ printer location. 2. Tap the student  card. 3. Tap the scan button.
+                            4. Put the paper inside the scanner. 5. Tap the green button. 6. Send the scanner result to your HZ email.
+                            7. Tap the close button.</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question3">
