--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Login via Selfservice Portal and then we need to book a room on the HZ page. We need to follow the instructions</p>
+                            <p>1. Go to <a href="hz.nl">hz.nl</a>Login via Selfservice Portal and then we need to book a room on the HZ page. We need to follow the instructions</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question5">
