--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>1. Go to <a href="hz.nl">hz.nl</a>Login via Selfservice Portal and then we need to book a room on the HZ page. We need to follow the instructions</p>
+                            <p>1. Go to <a href="portal.hz.nl">portal.hz.nl</a>. 2. Login with your HZ account. 3. Go to change personal menu. 4. Find AVReservation. 5. Search for the available room. 6. Follow the next instruction until finish.</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question5">
