--- a/faq.html
+++ b/faq.html
@@ -89,7 +89,10 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>We must park our car at the parking lot of the former PEZM.</p>
+                            <p>We must park our car at the car park of PEZM at Poelendaelesingel 10. But, there is a disabled parking space
+                            available right next to the HZ building at Het Groene Woud 1-3. When you want to park your car, follow 
+                            the signs to the HZ parking places and using the HZ pass. After that we need to walk to HZ.
+                            </p>
                         </div>
                     </div>
                 </div>
