--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <article class="index-col">
                     <h3>Parent Experience</h3>
                     <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.
-                    I learned a lot of hardships at work as well as the joys that come with it.</p>
+                    I learned a lot of difficulties at work as well as the joys that come with it.</p>
                     <figure class="opinion-image">
                         <img src="resources/parents-image.png" alt="Parents Experience of Alessandro Ryo">
                     </figure>
