--- a/faq.html
+++ b/faq.html
@@ -44,10 +44,17 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>1. Go to <a href="print.hz.nl">print.hz.nl</a>
-                            . 2. Login with HZ account. 3. Upload the document. 4. Walk to the HZ printer location.
-                            5. Tap the student card. 6. Tap the print button. 7. Check the document that you want to print.
-                            8. Print the document. 9. Tap the close button.    </p>
+                            <p>
+                                1. Go to <a href="print.hz.nl">print.hz.nl</a>.<br>
+                                2. Login with HZ account.<br>
+                                3. Upload the document.<br>
+                                4. Walk to the HZ printer location.<br>
+                                5. Tap the student card.<br>
+                                6. Tap the print button.<br>
+                                7. Check the document that you want to print.<br>
+                                8. Print the document.<br>
+                                9. Tap the close button.<br>
+                            </p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question2">
@@ -57,9 +64,15 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>1. Walk to the HZ printer location. 2. Tap the student  card. 3. Tap the scan button.
-                            4. Put the paper inside the scanner. 5. Tap the green button. 6. Send the scanner result to your HZ email.
-                            7. Tap the close button.</p>
+                            <p>
+                                1. Walk to the HZ printer location.<br>
+                                2. Tap the student card.<br>
+                                3. Tap the scan button.<br>
+                                4. Put the paper inside the scanner.<br>
+                                5. Tap the green button.<br>
+                                6. Send the scanner result to your HZ email.<br>
+                                7. Tap the close button.<br>
+                            </p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question3">
@@ -79,7 +92,14 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>1. Go to <a href="portal.hz.nl">portal.hz.nl</a>. 2. Login with your HZ account. 3. Go to change personal menu. 4. Find AVReservation. 5. Search for the available room. 6. Follow the next instruction until finish.</p>
+                            <p>
+                               1. Go to <a href="portal.hz.nl">portal.hz.nl</a>.<br>
+                               2. Login with your HZ account.<br>
+                               3. Go to change personal menu.<br>
+                               4. Find AVReservation.<br>
+                               5. Search for the available room.<br>
+                               6. Follow the next instruction until finish.<br>
+                            </p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question5">
