--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">About Me</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
@@ -51,7 +51,7 @@
         <section class="index">
             <h1>Choosing HBO-ICT</h1>
             <article class="index-text">
-                <p>I chose HBO-ICT at HZ University of Applied Science,
+                <p>I choose HBO-ICT at HZ University of Applied Science,
                 because since I was a kid, I really liked computers and games.
                 Then I really wanted to study in the Netherlands, far from Indonesia.
                 Studying at HZ would fit my hopes and dreams very well.
@@ -64,7 +64,8 @@
                     <p>Choosing HBO-ICT is my life choice and my passion is in this major.
                     I also had the opportunity to be a head of IT division in the student council,
                     where I created a website for the student council, became a social media manager,
-                    and had several other tasks related to the ICT world.</p>
+                    and had several other tasks related to the ICT world. And one of my life goal
+                    is to make my own start-up company.</p>
                     <figure class="opinion-image">
                         <img src="resources/passion-image.png" alt="HBO-ICT Passion of Alessandro Ryo">
                     </figure>
