--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">About Me</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
