--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3>Successful Figure</h3>
                     <p>I see many examples of successful figures because of their expertise in the ICT world.
                     For examples, Bill Gates, Steve Jobs, Mark Zuckerberg, Larry Page, and many more.
-                    From there I learned a lot about the IT world and its struggles.</p>
+                    From there, I can learn a lot about the IT world and its struggles.</p>
                     <figure class="opinion-image">
                         <img src="resources/figure-image.png" alt="HBO-ICT Figure Person of Alessandro Ryo">
                     </figure>
