--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </ul>
         </article>
         <div class="footer-bottom">
-            <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
+            <p>copyright &copy; 2021 Ryo. designed by Alessandro Ryo</p>
         </div>
     </footer> 
     <script src="js/script.js"></script>
