--- a/ict-fow.html
+++ b/ict-fow.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the ICT field of work of Alessandro Ryo showcase website">
     <title>ICT Field of Work | Alessandro Ryo</title>
     <link rel="icon" href="resources/hz-icon.png">
     <link rel="stylesheet" href="css/style.css">
@@ -89,7 +90,7 @@
             </ul>
         </article>
         <div class="footer-bottom">
-            <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
+            <p>copyright &copy; 2021 Ryo. designed by Alessandro Ryo</p>
         </div>
     </footer> 
     <script src="js/script.js"></script>
